Fix style issues caused by overlapping classes
Same class used in two different places. When one was updated, broke the
appearance of the other one!

Not really sure what the best way is to prevent this from happening - better
organization of classes would be a start, and better naming too.

--- a/_sass/screen.sass
+++ b/_sass/screen.sass
@@ -162,16 +162,16 @@ pre
   margin: $padding auto 0
   text-align: left
   h3
-    border-bottom: 2px solid $accent_gray
+    border-bottom: 1px solid $accent_gray
     font-size: 26px
     margin-bottom: $padding/2
     margin-left: 0
     padding-bottom: 5px
 
-.category_list
+.category_card
   background-color: white
   margin-bottom: 10px
-  padding: 20px 0
+  padding: 20px
   h3 a
     color: $text_color
     margin-bottom: 10px
@@ -679,11 +679,15 @@ table
   width: $post_width
   padding: $padding 0 $padding*2
   background-color: white
+  text-align: left
   h2
     margin-bottom: $padding/2
     font-size: 20px
     a
       +link-hover
+  .category_title
+    margin-bottom: 10px
+    padding: 20px 0
 
 
 ////////// SEARCH ////////////
